# Scraping-IMDB

./: README.MD  scrapping(version2).ipynb  scrapping.ipynb
Data/1920/: advanced_movies_details_1920.csv  merged_movies_data_1920.csv
Data/1921/: advanced_movies_details_1921.csv  imdb_movies_1921.csv  merged_movies_data_1921.csv
Data/1922/: advanced_movies_details_1922.csv  imdb_movies_1922.csv  merged_movies_data_1922.csv
Data/1923/: imdb_movies_1923.csv
Data/1960/: advanced_movies_details_1960.csv  imdb_movies_1960.csv  merged_movies_data_1960.csv
Data/1961/: advanced_movies_details_1961.csv  imdb_movies_1961.csv  merged_movies_data_1961.csv
Data/1962/: advanced_movies_details_1962.csv  imdb_movies_1962.csv  merged_movies_data_1962.csv
Data/1963/: advanced_movies_details_1963.csv  imdb_movies_1963.csv  merged_movies_data_1963.csv
Data/1964/: advanced_movies_details_1964.csv  imdb_movies_1964.csv  merged_movies_data_1964.csv
Data/1965/: advanced_movies_details_1965.csv  imdb_movies_1965.csv  merged_movies_data_1965.csv
Data/1966/: advanced_movies_details_1966.csv  imdb_movies_1966.csv  merged_movies_data_1966.csv
Data/1988/: imdb_movies_1988.csv
Data/1999/: advanced_movies_details_1999.csv  imdb_movies_1999.csv  merged_movies_data_1999.csv
Data/2001/: advanced_movies_details_2001.csv  imdb_movies_2001.csv  merged_movies_data_2001.csv
Data/2002/: imdb_movies_2002.csv
Dataset/: cleaning-and-normalizing-data.ipynb  guide-to-extracting-data-from-this-dataset.ipynb
code/: LinkExtraction.py  advancedDataExtraction.py  merging.py  pyproject.toml
(+54 files in other folders)
